# lingograde

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: gcp-deploy.yml  heroku-deploy.yml
app/: main.py
app/api/: auth.py  main.py
app/database/: db_manager.py  recordings.db
app/model/: predictor.py
app/storage/: storage_manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx  types.ts
frontend/src/api/: index.ts
frontend/src/components/: AudioRecorder.tsx  Dashboard.tsx  GradesChart.tsx  Login.tsx  Navbar.tsx  RecordingsList.tsx  Signup.tsx  TranscriptionView.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/types/: react-plotly.d.ts
scripts/: dev-entrypoint.sh  docker-entrypoint.sh  init-frontend.sh
